# piva

./: CMakeLists.txt  README.md  environment.yml  setup.py
.github/workflows/: condarecipe.yml
conda.recipe/: bld.bat  build.sh  meta.yaml
examples/: example.py
examples-cpp/: CMakeLists.txt  README.md
examples-cpp/src/: auxiva.cpp  auxiva_iss.cpp
include/piva/: auxiva.hpp  auxiva_iss.hpp  core.hpp  five.hpp  overiva.hpp  pca.hpp  stft.hpp  utils.hpp
piva/: __init__.py  auxiva.py  auxiva_iss.py  defaults.py  five.py  metrics.py  pca.py  projection_back.py  utils.py
src/: main.cpp
tests/: test_auxiva.py  test_auxiva_iss.py  test_five.py  test_mixiva_vs_cpp.py  test_overiva.py  test_overiva_vs_cpp.py  test_pca.py  test_stft.py
utils/: __init__.py  get_samples.py  gui.py  make_room.py
